@@ -189,6 +189,8 @@
     <!-- in unexpected plugin changes outside of maven-compiler-plugin. -->
     <skipCompile>false</skipCompile>
     <skipTestCompile>false</skipTestCompile>
+
+    <compiler.proc>none</compiler.proc>
   </properties>
 
   <build>
@@ -521,9 +523,6 @@
             <skipMain>${skipCompile}</skipMain>
             <skip>${skipTestCompile}</skip>
             <compilerArgs combine.children="append" combine.self="append">
-              <!-- Turn off annotation processing -->
-              <arg>-proc:none</arg>
-
               <!-- https://docs.oracle.com/javase/7/docs/technotes/tools/windows/javac.html#xlintwarnings -->
               <arg>-Xlint:cast</arg>
               <arg>-Xlint:classfile</arg>
@@ -544,6 +543,9 @@
               <arg>-Xlint:unchecked</arg>
               <arg>-Xlint:varargs</arg>
             </compilerArgs>
+
+            <!-- Default is annotation processing being off. -->
+            <proc>${compiler.proc}</proc>
           </configuration>
         </plugin>
 
@@ -1021,6 +1023,9 @@
               <argLine>
                 ${defaultSurefireArgLine}
                 ${javaModulesSurefireArgLine}
+                <!-- This is required as the Java 8 based implementation for ReflectionUtils may be loaded by IntelliJ when running tests with later versions of Java. -->
+                <!-- In later versions of Java, java.base doesn't open java.lang.invoke to azure-core, so it needs to be done with this directive. This only affects tests. -->
+                --add-opens java.base/java.lang.invoke=com.azure.core
                 ${additionalSurefireArgLine}
               </argLine>
             </configuration>
